# tiny_backtester

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/: moving_average_crossover.py
src/: backtester_exception.py  backtester_types.py  backtester_utils.py  dataloader.py  engine.py  strategy.py
src/tiny_backtester/: __init__.py  backtester_types.py  cli.py  constants.py  data_utils.py  dataloader.py  engine.py  strategy.py  time_series_resampler.py
src/tiny_backtester/utils/: .#backtester_types.py  backtester_types.py  constants.py  decorators.py  math_utils.py
tests/: test_data_utils.py  test_dataloader.py  test_engine.py  test_math_utils.py  test_utils.py
tests/integration/: test_strategy.py
tests/integration/static/: TEST_valid.csv
tiny_backtester/: backtester_types.py  dataloader.py  engine.py  strategy.py
