[tool.poetry]
name = "tiny-backtester"
version = "0.0.1"
description = "A tiny backtesting framework using Pandas"
authors = ["Daniel Cripps <binary.riviera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
