[tool.poetry]
authors = ["Daniel Cripps <binary.riviera@gmail.com>"]
description = "A tiny backtesting framework using Pandas"
name = "tiny-backtester"
packages = [{include = "tiny_backtester", from = "src"}]
readme = "README.md"
version = "0.0.2"

[tool.poetry.dependencies]
pandas = "^2.3.0"
python = "^3.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
